assignment-27: complete-ish, not performing as expected per comments in about.html.erb

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -1,1 +1,13 @@
+.btn-color {
+  color: #ff0000;
+}
 
+.soc-btn {
+  color: #00aced;
+  height: 20px;
+  padding: 15 15 15 15;
+  width: 100px;
+  border: 1px solid;
+  border-color: red;
+  text-align: center;
+}
