--- a/app/views/sponsored_posts/new.html.erb
+++ b/app/views/sponsored_posts/new.html.erb
@@ -22,6 +22,11 @@
       </div>
 
       <div class="form-group">
+        <%= f.label :price %>
+        <%= f.number_field :body, row: 8, class: 'form-control', placeholder: "Enter price" %>
+      </div>
+
+      <div class="form-group">
         <%= f.submit "Save", class: 'btn btn-success' %>
       </div>
     <% end %>
