--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -18,7 +18,6 @@
      <% end %>
    </div>
    <div class="col-md-4">
-
-     <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
+     the <%= link_to "New Topic", new_topic_path, class: 'btn btn-success' %>
    </div>
  </div>
