--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,6 @@
 <div>
   <%= render partial: 'votes/voter', locals: { post: @post } %>
+
   <h1>
     <%= @post.title %> <br>
     <small>
@@ -19,19 +20,27 @@
  <div class="col-md-8">
    <p><%= @post.body %></p>
    <div>
+
      <h3>Comments</h3>
-     <%= render @post.comments %>
-     <% if current_user %>
+     <div class='js-comments'>
+       <%= render @post.comments %>
+     </div>
+   </div>
+   <% if current_user %>
+     <div class='new-comment'>
        <%= render 'comments/form', comment: Comment.new, post: @post %>
+     </div>
      <% end %>
    </div>
  </div>
+
  <% if user_is_authorized_for_post?(@post) %>
    <div class="col-md-4">
      <%= link_to "Edit", edit_topic_post_path(@post.topic, @post), class: 'btn btn-success' %>
      <%= link_to "Delete Post", [@post.topic, @post], method: :delete, class: 'btn btn-danger', data: { confirm: 'Are you sure you want to delete this post?' } %>
    </div>
  <% end %>
+
  <div class="col-md-4">
    <h3>
      <%= pluralize(@post.points, 'point') %>
@@ -42,8 +51,10 @@
        </small>
      </div>
    </h3>
+
    <% if current_user %>
      <%= render partial: 'favorites/favorite', locals: { post: @post } %>
    <% end %>
+
  </div>
 </div>
