--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,9 +2,9 @@
 
  <div class="row">
    <div class="col-md-8">
-
-     <% @topics.each do |topic| %>
-       <div class="media">
+     <%= render @topics %>
+     <!-- <% @topics.each do |topic| %> -->
+       <!-- <div class="media">
          <div class="media-body">
            <h4 class="media-heading">
 
@@ -15,7 +15,7 @@
            </small>
          </div>
        </div>
-     <% end %>
+     <% end %> -->
    </div>
    <% if user_is_authorized_for_topics? %>
      <div class="col-md-4">
