--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,11 +15,7 @@
  <div class="col-md-8">
    <p><%= @post.body %></p>
    <div>
-     <h3>Comments</h3>
-     <%= render @post.comments %>
-     <% if current_user %>
-       <%= render 'comments/form', comment: Comment.new, post: @post %>
-     <% end %>
+     <!-- <h3>Comments</h3> -->
    </div>
  </div>
  <% if user_is_authorized_for_post?(@post) %>
