--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,7 +15,14 @@
  <div class="col-md-8">
    <p><%= @post.body %></p>
    <div>
-     <!-- <h3>Comments</h3> -->
+     <h3>CommentZ</h3>
+     <% @post.comments.each do |comment| %>
+      <%= render partial: "comments/comment", locals: {obj: comment.post, comment: comment} %>
+     <% end %>
+
+     <% if current_user %>
+      <%= render 'comments/form', locals: { obj: Post.new, comment: Comment.new}  %>
+     <% end %>
    </div>
  </div>
  <% if user_is_authorized_for_post?(@post) %>
