--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,18 +13,12 @@
      </p>
      <div>
 
-     <h3>Comments</h3>
-<!--
-       <% @topic.comments.each do |comment| %>
-         <div class="media">
-           <div class="media-body">
-             <h4 class="media-heading"></h4>
-               <%= comment.body %>
-           </div>
-         </div>
-       <% end %> -->
-     </div>
+     <h3>CommentZ</h3>
+     <% @topic.comments.each do |comment| %>
+      <%= render partial: "comments/comment", locals: { obj: Topic.new, comment: comment } %>
+     <% end %>
 
+    <h3>Posts</h3>
      <% @topic.posts.each do |post| %>
        <div class="media">
          <div class="media-body">
