--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -27,13 +27,17 @@
      </div>
 
      <div class="form-group">
+       <%= render partial: 'comments/form', locals: { f: f, obj: Topic.new, comments: @topic.comments } %>
+     </div>
+
+     <div class="form-group">
        <%= f.label :public, class: 'checkbox' do %>
          <%= f.check_box :public %> Public topic
        <% end %>
      </div>
 
      <%= f.submit "Save", class: 'btn btn-success' %>
-     
+
    <% end %>
  </div>
 </div>
