--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -14,12 +14,19 @@
      <div>
 
      <h3>CommentZ</h3>
-     <% @topic.comments.each do |comment| %>
-      <%= render partial: 'comments/comment', locals: {obj: @topic, comment: comment} %>
+     <%= @topic.comments.each do |comment| %>
+       <div class="media">
+         <div class="media-body">
+           <h4 class="media-heading">
+             <%= comment.body %>
+         </div>
+       </div>
      <% end %>
+
 
      <% if current_user %>
       <%= render partial: 'comments/form', locals: {obj: @topic, comment: Comment.new}  %>
+
      <% end %>
 
     <h3>Posts</h3>
