--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -25,7 +25,7 @@
 
 
      <% if current_user %>
-      <%= render partial: 'comments/form', locals: {obj: @topic, comment: Comment.new}  %>
+      <%= render partial: 'comments/form', locals: {commentable: @topic}  %>
 
      <% end %>
 
