--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,11 +15,8 @@
  <div class="col-md-8">
    <p><%= @post.body %></p>
    <div>
-     <h3>CommentZ</h3>
-     <% @post.comments.each do |comment| %>
-      <%= render partial: 'comments/comment', locals: {commentable: @post, comment: post.comments} %>
-     <% end %>
-
+     <h3>Comments</h3>
+     <%= render partial: 'comments/comment', locals: {commentable: @post} %>
      <% if current_user %>
       <%= render partial: 'comments/form', locals: {commentable: @post}  %>
      <% end %>
