--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,20 +13,10 @@
      </p>
      <div>
 
-     <h3>CommentZ</h3>
-     <%= @topic.comments.each do |comment| %>
-       <div class="media">
-         <div class="media-body">
-           <h4 class="media-heading">
-             <%= comment.body %>
-         </div>
-       </div>
-     <% end %>
-
-
+     <h3>Comments</h3>
+     <%= render partial: 'comments/comment', locals: {commentable: @topic} %>
      <% if current_user %>
       <%= render partial: 'comments/form', locals: {commentable: @topic}  %>
-
      <% end %>
 
     <h3>Posts</h3>
